Changes made in about me section

--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
 
 
 <h2> <u>About me</u></h2>
-My name is Aswini KP. I am from Kerala.<br/>
+My name is Aswini KP. I am from Kannur,Kerala.<br/>
 I have completed by bechelor degree in Information Technology from MESCE Kuttipuram.<br/>
 I have worked as a software engineer for 2 years.</p>
 <h2><u>Qualification</u></h2>
