--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,13 +26,14 @@
  <div class="row">
  <!--First colunm-->
   <div class="col-md-3">
+   <h2>About me</h2>
     <img src="C:\Users\akhil\Downloads\flower.jpg" width=90 height=90 alt="My image" />
   </div>
   <!-- second column-->
  <div class="col-md-9 ">
-   <h2>About me</h2>
-   <h1>Hello</h1>
-   <p>My name is Aswini KP. I am from Denmark.
+  
+   <!--<h1>Hello</h1> -->
+   <p style="color:grey">My name is Aswini KP. I am from Denmark.
     I have completed my bechelor degree in Information Technology.
     I have worked as a software developer for 2 years.</p>
     <table class"tablestyle">
@@ -86,8 +87,48 @@
  <br/>
 
 
-<div>
-  <table>
+ 
+
+<div class="row">
+  <span class="column">2016-19</span>
+  <span class="column expwidth"><b>Software engineer in Globees Solutions</b></span>
+ </div>
+ <br/>
+
+ <div class="vl"></div>
+
+ <div class="row">
+  <span class="column">2011-15</span>
+  <span class="column expwidth"><b>Bachelor degree in Information Technology</b></span>
+  </div>
+  <br/>
+
+   <div class="vl"></div>
+
+ <div class="row">
+  <span class="column">2009-11</span>
+  <span class="column expwidth"><b>Higher secondary</b></span>
+  </div>
+</div>
+</div>
+
+
+
+</div>
+
+
+ 
+
+
+
+
+
+
+
+</body>
+</html>
+
+<!--<table>
   <tr>
   <td >2016-19</td>
   <td><b>Software engineer in Globees Solutions</b></td>
@@ -100,8 +141,19 @@
    <td>2009-11</td>
    <td><b>Higher secondary</b></td>
   </tr>
-  </table>
-</div>
+  </table> -->
+
+<!--<div class="row my-4">
+						<div class="col-md-6">
+							<p class="mb-2">Name: <span class="text-dark">Bako Doe</span></p>
+							<p class="mb-0">Birthday: <span class="text-dark">14 August, 1990</span></p>
+						</div>
+						<div class="col-md-6 mt-2 mt-md-0 mt-sm-2">
+							<p class="mb-2">Location: <span class="text-dark">London, UK</span></p>
+							<p class="mb-0">Email: <span class="text-dark">hello@bako.com</span></p>
+						</div>
+					</div>
+                    -->
 
 <!--div class="row">
   <span class="column">123</span>
@@ -109,35 +161,3 @@
   <span class="column">12345555</span>
   <span class="column">4555555</span>
 </div> -->
-
-<!--<div class="row">
-				<div class="col-md-3">
-					<img src="C:\Users\akhil\Downloads\flower.jpg"  width=90 height=90 alt="My image">
-				</div>
-				<div class="col-md-9">
-					<h2>Hello,</h2>
-					<p >I am Bako Doe, web developer from London, United Kingdom. I have rich experience in web site design and building and customization, also I am good at wordpress.</p>
-					<div class="row my-4">
-						<div class="col-md-6">
-							<p >Name: <span>Bako Doe</span></p>
-							<p >Birthday: <span class="text-dark">14 August, 1990</span></p>
-						</div>
-						<div class="col-md-6 mt-2 mt-md-0 mt-sm-2">
-							<p>London, UK</span></p>
-							<p >Email: hello@bako.com</span></p>
-						</div>
-					</div>
-					<a href="#" class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download CV</a>
-					<a href="#" class="btn btn-alt mt-2 mt-md-0 mt-xs-2"><i class="icon-envelope"></i>Hire me</a>
-				</div>
-			</div> -->
-
-
-
-
-
-
-
-
-</body>
-</html>
