portfolio has been updated

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,21 +21,22 @@
 </div>
 <!-- About me-->
 
-<div class="secondsection">
 
+<div class="secondsection">
  <div class="row">
- <!--First colunm-->
+ 
   <div class="col-md-3">
    <h2>About me</h2>
     <img src="C:\Users\akhil\Downloads\flower.jpg" width=90 height=90 alt="My image" />
   </div>
-  <!-- second column-->
- <div class="col-md-9 ">
+  
+   <div class="col-md-9 ">
   
    <!--<h1>Hello</h1> -->
    <p style="color:grey">My name is Aswini KP. I am from Denmark.
     I have completed my bechelor degree in Information Technology.
-    I have worked as a software developer for 2 years.</p>
+    I have worked as a software developer for 2 years.
+    </p>
     <table class"tablestyle">
     <tr>
      <td>Name:</td>
@@ -153,6 +154,31 @@
 							<p class="mb-0">Email: <span class="text-dark">hello@bako.com</span></p>
 						</div>
 					</div>
+
+About section
+<div class="secondsection">
+  <h2>About me</h2>
+  <div class="row">
+  <span class="column"> 
+  <img src="C:\Users\akhil\Downloads\flower.jpg" width=90 height=90 alt="My image" />
+  </span>
+ 
+  <span class="column">My name is Aswini KP.I am from Denmark.<br/>
+    I have completed my bechelor degree in Information Technology.
+    I have worked as a software developer for 2 years.
+    </span>
+  
+
+
+</div>
+</div>
+
+
+
+
+
+
+
                     -->
 
 <!--div class="row">
