table font color updated

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,21 +33,21 @@
    <div class="col-md-9 ">
   
    <!--<h1>Hello</h1> -->
-   <p style="color:grey">My name is Aswini KP. I am from Denmark.
+   <p class="headcol">My name is Aswini KP. I am from Denmark.
     I have completed my bechelor degree in Information Technology.
     I have worked as a software developer for 2 years.
     </p>
     <table class"tablestyle">
     <tr>
-     <td>Name:</td>
+     <td class="headcol">Name:</td>
      <td >Aswini KP</td>
-     <td >Location:</td>
+     <td class="headcol" >Location:</td>
      <td>Denmark</td>
     </tr>
     <tr >
-     <td>Birthday:</td>
+     <td class="headcol">Birthday:</td>
      <td>13 August, 1993</td>
-     <td>Email:</td>
+     <td class="headcol">Email:</td>
      <td>aswinikp004@gmail.com</td>
     </tr>
     </table><br/>
