name changed to index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
   <div class="col-md-3">
    <h2>About me</h2>
-    <img src="C:\Users\akhil\Downloads\flower.jpg" width=90 height=90 alt="My image" />
+    <img src="flower.jpg" width=90 height=90 alt="My image" />
   </div>
   
    <div class="col-md-9 ">
@@ -154,6 +154,8 @@
 							<p class="mb-0">Email: <span class="text-dark">hello@bako.com</span></p>
 						</div>
 					</div>
+
+
 
 About section
 <div class="secondsection">
