--- a/index.html
+++ b/index.html
@@ -10,72 +10,66 @@
 </head>
 <body>
 
-<div class="firstbox sectioncolor">
+  <div class="firstbox sectioncolor">
 
-<h1>Aswini KP</h1>
-<p>When it comes to success, there are no shortcuts</p>
-<button class="button red" ><i class="fa fa-file"></i> View Portfolio</button>
-
-<button class="button"> Hire me </button>
+    <h1>Aswini KP</h1>
+    <p>When it comes to success, there are no shortcuts</p>
+    <button class="button red" ><i class="fa fa-file"></i> View Portfolio</button>
+    <button class="button"> Hire me </button>
   
-</div>
+  </div>
 <!-- About me-->
 
 
-<div class="secondsection">
- <div class="row">
+  <div class="secondsection">
+    <div class="row">
  
-  <div class="col-md-3">
-   <h2>About me</h2>
-    <img src="flower.jpg" width=90 height=90 alt="My image" />
-  </div>
+     <div class="col-md-3">
+      <h2>About me</h2>
+      <img src="flower.jpg" width="90px" height="90px" alt="My image" />
+    </div>
   
    <div class="col-md-9 ">
-  
-   <!--<h1>Hello</h1> -->
-   <p class="headcol">My name is Aswini KP. I am from Denmark.
-    I have completed my bechelor degree in Information Technology.
-    I have worked as a software developer for 2 years.
+     <p class="headcol">My name is Aswini KP. I am from Denmark.
+      I have completed my bechelor degree in Information Technology.
+      I have worked as a software developer for 2 years.
     </p>
     <table class"tablestyle">
-    <tr>
-     <td class="headcol">Name:</td>
-     <td >Aswini KP</td>
-     <td class="headcol" >Location:</td>
-     <td>Denmark</td>
+     <tr>
+      <td class="headcol">Name:</td>
+      <td >Aswini KP</td>
+      <td class="headcol" >Location:</td>
+      <td>Denmark</td>
     </tr>
     <tr >
-     <td class="headcol">Birthday:</td>
-     <td>13 August, 1993</td>
-     <td class="headcol">Email:</td>
-     <td>aswinikp004@gmail.com</td>
+      <td class="headcol">Birthday:</td>
+      <td>13 August, 1993</td>
+      <td class="headcol">Email:</td>
+      <td>aswinikp004@gmail.com</td>
     </tr>
-    </table><br/>
+   </table><br/>
 
     <div class="SecondsectionBtn">
-    <button class="button red"><i class="fa fa-file"></i> Download CV</button>
-    <button class="button"> Hire me </button>
+     <button class="button red"><i class="fa fa-file"></i> Download CV</button>
+     <button class="button"> Hire me </button>
     </div>
+  </div>
  </div>
-
-</div>
 </div>
 <!-- Skills-->
 <div class="secondsection">
-
-<h2>My skills</h2>
- <br/>
-
- <div class="row">
-  <span class="column">
+  <h2>My skills</h2>
+  <br/>
+  div class="row">
+   <span class="column">
      <h3>Html&CSS</h3>
      <progress  max="100" value="50"></progress>50%
-  </span>
+   </span>
 
-  <span class="column">
+   <span class="column">
       <h3>Java</h3>
       <progress  max="100" value="50"></progress>50%
-  </span>
+   </span>
   </div>
 </div>
 
@@ -83,14 +77,9 @@
 
 <!-- experience-->
 <div class="secondsection">
-
-<h2>Experience</h2>
- <br/>
-
-
- 
-
-<div class="row">
+  <h2>Experience</h2>
+  <br/>
+ <div class="row">
   <span class="column">2016-19</span>
   <span class="column expwidth"><b>Software engineer in Globees Solutions</b></span>
  </div>
@@ -112,9 +101,6 @@
   </div>
 </div>
 </div>
-
-
-
 </div>
 
 
