favourite links added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Aswini KP</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <a id="top"</a>
 </head>
 <body>
 
   <div class="firstbox sectioncolor">
-
+  
     <h1>Aswini KP</h1>
     <p>When it comes to success, there are no shortcuts</p>
     <button class="button red" ><i class="fa fa-file"></i> View Portfolio</button>
@@ -101,6 +101,24 @@
   </div>
 </div>
 </div>
+</div>
+
+<!-- favourite links-->
+
+<div class="secondsection">
+  <h2>Favourite links</h2>
+  <br/>
+<ul>
+   <li><a href="https://www.google.com/">Google</a></li>
+   <li><a href="https://www.linkedin.com/">Linkedin</a></li></li>
+   <li><a href="https://www.netflix.com/">Netflix</a></li></li>
+   <li><a href="https://www.amazon.in/">Amazon</a></li></li>
+   <li><a href="https://www.jobindex.dk/">Job index</a></li></li>
+ 
+  </ul>
+  <br/>
+
+   <a href="#top"> Back to top </a>
 </div>
 
 
