--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="secondsection">
   <h2>My skills</h2>
   <br/>
-  div class="row">
+  <div class="row">
    <span class="column">
      <h3>Html&CSS</h3>
      <progress  max="100" value="50"></progress>50%
